--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-menu></app-menu>
-<router-outlet></router-outlet>
+<main>
+  <app-side-bar></app-side-bar>
+  <router-outlet></router-outlet>
+</main>
