--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -3,34 +3,33 @@
     height: 80vh;
 }
 
+main{
+    height: 100%;
+}
+
 .daysLabel{
     display: flex;
     flex-direction: row;
-    width: 100%;
     justify-content: space-around;
-    margin: 20px;
+    margin: 20px 0;
 }
 
 .calendar {
-    width: 100%;
     height: 100%;
-}
-
-.mounth{
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
 }
+
 
 .week{
     display: flex;
     flex-direction: row;
-    height: 25%;
+    flex-grow: 1;
+    align-items: stretch;
 }
 
 .day{
     border: 1px solid gray;
-    width: 100%;
+    flex-grow: 1;
 }
 
