--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,9 +1,10 @@
 .navbar {
-  background-color: blanchedalmond;
+  background-color:cornflowerblue;
   display: flex;
   justify-content: flex-end;
 }
 a {
+  font-size: large;
   padding: 25px;
-  margin-right: 25px;
+  margin-right: 15px;
 }
