--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,28 +1,22 @@
-<main>
-  <form action="">
-    <label for="mounth">Mois : </label>
-    <input name="mounth" type="mounth" />
-    <label for="year">Année : </label>
-    <input name="year" type="year" />
-  </form>
-  <div class="daysLabel">
-    <span>Lundi</span>
-    <span>Mardi</span>
-    <span>Mercredi</span>
-    <span>Jeudi</span>
-    <span>Vendredi</span>
-    <span>Samedi</span>
-    <span>Dimanche</span>
-  </div>
-  <div class="calendar" *ngIf="calendar.display == 'mounth'">
-    <table class="calendar">
-      <tr class="week" *ngFor="let week of calendar.mounthGrid; let i = index">
-        <td
-          class="day"
-          *ngFor="let day of calendar.weekGrid; let j = index"
-          id="`${i}`"
-        ></td>
-      </tr>
-    </table>
-  </div>
-</main>
+<div class="allComponent">
+    <form name="selectDate">
+        <label for="year">Year : </label>
+        <input type="number" name="year" [(ngModel)]='selectedYear' min="2023" max="2100" (change)="generateMonth()">
+        <label for="mounth">Month : </label>
+        <input type="number" name="mounth" [(ngModel)]='selectedMonth' min="1" max="12" (change)="generateMonth()">
+    </form>
+    <ul class="dayOfWeek">
+        <li>Lundi</li>
+        <li>Mardi</li>
+        <li>Mercredi</li>
+        <li>Jeudi</li>
+        <li>Vendredi</li>
+        <li>Samedi</li>
+        <li>Dimanche</li>
+    </ul>
+    <div class="calendar">
+        <div class="prevDay" *ngFor="let day of prevMonth; let i=index">{{prevMonth[i]}}</div>
+        <div class="day" *ngFor='let day of month; let j=index' [id]=j+1 (click)="createRDV($event)">{{j+1}}</div>
+        <div class="nextDay" *ngFor="let day of nextMonth; let k=index">{{nextMonth[k]}}</div>
+    </div>
+</div>
