calendar aside modificaions

--- a/src/app/side-bar/menu-calendar/menu-calendar.component.html
+++ b/src/app/side-bar/menu-calendar/menu-calendar.component.html
@@ -10,5 +10,12 @@
         </th>
       </tr>
     </thead>
+    <tbody>
+      <tr>
+        <td *ngFor="let day of date.monthDays; let i = index">
+          {{ day }}
+        </td>
+      </tr>
+    </tbody>
   </table>
 </div>
