--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,7 +20,7 @@
   <div *ngIf="alreadyRegistered" class="registered">This email address is already taken!</div>
   <br>
   <div class="btn">
-  <button type="submit" [disabled]="form.invalid">Register</button>
-  <button routerLink="/">Cancel</button>
+  <button class="button-3" role="button" type="submit" [disabled]="form.invalid">Register</button>
+  <button class="button-4" routerLink="/">Cancel</button>
 </div>
 </form>
