--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,11 @@
+:host {
+ width: 40%;
+ margin: auto;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+
 .field {
   text-align: center;
   display: flex;
@@ -12,7 +20,7 @@
 }
 
 .field input {
-  width: 20%;
+  width: 100%;
 }
 
 .btn {
