--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
   <h1 style="text-align: center">Register</h1>
-  <h3 style="align-items: center;">You already have an account, please <a routerLink="/login">Connect</a></h3>
+  <h3 style="text-align: center;">You already have an account, please <a routerLink="/login">Connect</a></h3>
   <form #form="ngForm" (ngSubmit)="onRegister(form)">
     <fieldset>
       <label>User Name:</label>
