--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -3,15 +3,15 @@
   <form #form="ngForm" (ngSubmit)="createRdv(form)">
 
     <div class="form">
-    <label for="">Nom</label>
-    <input type="text">
-    <label for="">Date</label>
-    <input type="date">
-    <label for="">Description</label>
-      <textarea name="" id="" cols="15" rows="5"></textarea>
+    <label for="name">Nom</label>
+    <input ngModel name="name" type="text" >
+    <label for="date">Date</label>
+    <input readonly="readonly" class="notEditable" name="date" type="text" [(ngModel)]='currentId'>
+    <label for="description">Description</label>
+      <textarea ngModel name="description" id="" cols="15" rows="5"></textarea>
   <br>
       <div class="btn">
-      <button class="button-3">Confirmer</button>
+      <button type="submit" class="button-3">Confirmer</button>
       <button class="button-4" (click)="cancel()">Annuler</button>
     </div>
 
