--- a/src/app/calendar-week-view/calendar-week-view.component.css
+++ b/src/app/calendar-week-view/calendar-week-view.component.css
@@ -17,25 +17,55 @@ main {
   list-style-type: none;
   justify-content: space-around;
   padding: 0;
+  margin-bottom: 0;
+  text-align: center;
+  margin-right: 5px;
 }
 
 .calendar {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   align-items: stretch;
   height: 100%;
-  justify-content: space-around;
-  gap: 10px;
+  gap: 0px;
   margin: auto;
 }
 
 .calendar>* {
   min-width: 12.25%;
-  border-radius: 5px;
-  border: solid 1px gray;
+  border-right: solid .3px #cecece;
+  border-top: none;
+  border-bottom: none;
+}
+
+.calendar>*:last-child {
+  border-right: none;
 }
 
 .day {
-  background-color: lightblue;
+  width: calc(100%/7);
+}
+
+li {
+  width: calc(100%/7);
+}
+
+.dayDate {
+  text-align: right;
+  margin-right: 5px;
+  color: #ff1d58;
+}
+
+.hours {
+  position: relative;
+  height: calc(100% / 12);
+  border-top: solid .5px #cecece;
+}
+
+.beginHour {
+  color: rgb(110, 110, 110);
+  font-size: 8px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
 }
