--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -2,6 +2,15 @@
     width: 100%;
 }
 
+h2 {
+    text-align: center;
+    font-size: 24px;
+}
+
+h2 span {
+    color: #ff1d58;
+}
+
 .allComponent {
     height: 80vh;
 }
@@ -29,11 +38,15 @@
 .calendar>* {
     min-width: 12.25%;
     border-radius: 5px;
-    border: solid 1px gray;
+    box-shadow: 0px 5px 8px -3px rgba(0, 0, 0, 0.4);
+    padding: 5px;
 }
 
 .day {
-    background-color: lightblue;
+    background-color: none;
+    border: solid .1px #ececec;
+    color: #ff1d58;
+    cursor: pointer;
 }
 
 .prevDay,
