--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -49,9 +49,16 @@ h2 span {
     cursor: pointer;
 }
 
+.day:hover {
+    background-color: #ff1d59b9;
+    color: #fff;
+    border: solid .1px #ff1d5974;
+    box-shadow: 0px 5px 8px -3px rgb(255, 31, 90, 0.2);
+}
+
 .prevDay,
 .nextDay {
-    background-color: lightgray;
+    background-color: #e1e1e1;
 }
 
 /* The Modal (background) */
