--- a/src/app/calendar-view/calendar-view.component.css
+++ b/src/app/calendar-view/calendar-view.component.css
@@ -11,6 +11,11 @@
   align-items: center;
 }
 
+.leftArrow:hover,
+.rightArrow:hover {
+  fill: #5f5f5f;
+}
+
 .changeView {
   display: flex;
   flex-direction: row;
@@ -19,6 +24,7 @@
 
 .viewSelected {
   margin: 0;
+  color: #5f5f5f;
 }
 
 .viewContainer {
