--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,14 +1,26 @@
 :host {
-  width: 40%;
+  width: 60%;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+h3 {
+  font-size: 16px;
+  font-weight: 500;
+}
 
+h3 a {
+  color: #ff1d58;
+}
 
 fieldset {
   display: flex;
   flex-direction: column;
   padding: 20px;
+  border: none;
+  padding: 0;
 }
 
 .btn {
@@ -20,15 +32,11 @@ fieldset {
   margin-right: 20px;
 }
 
-fieldset label {
-
-  margin-bottom: 10px;
-}
-
 .warning {
-  background-color: burlywood;
   color: brown;
+  font-size: 14px;
 }
+
 .registered {
   text-align: center;
   font-size: larger;
@@ -49,7 +57,7 @@ fieldset label {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 14px;
   font-weight: 600;
   line-height: 20px;
