--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -9,39 +9,13 @@
     <li *ngFor="let day of monthCalendarService.weekDays">{{ day }}</li>
   </ul>
   <div class="calendar">
-    <div
-      class="prevDay"
-      *ngFor="let day of monthCalendarService.prevMonth; let i = index"
-    >
+    <div class="prevDay" *ngFor="let day of monthCalendarService.prevMonth; let i = index">
       {{ monthCalendarService.prevMonth[i] }}
     </div>
-    <div
-      class="day"
-      *ngFor="let day of monthCalendarService.month; let j = index"
-      [id]="
-        j +
-        1 +
-        '-' +
-        (monthCalendarService.selectedMonth + 1) +
-        '-' +
-        monthCalendarService.selectedYear
-      "
-      (click)="createRDV($event)"
-    >
-      {{ j + 1 }}
-      <div *ngFor="let rdv of userService1.currentUser.rdv"><span></span></div>
-    </div>
-    <div
-      class="nextDay"
-      *ngFor="let day of monthCalendarService.nextMonth; let k = index"
-    >
+    <app-day class="day" *ngFor="let day of monthCalendarService.month; let j = index"
+      [id]="j +1 +'-' +(monthCalendarService.selectedMonth + 1) +'-' +monthCalendarService.selectedYear"></app-day>
+    <div class="nextDay" *ngFor="let day of monthCalendarService.nextMonth; let k = index">
       {{ monthCalendarService.nextMonth[k] }}
     </div>
   </div>
 </div>
-<app-reservation
-  (cancelEvent)="dismiss()"
-  [currentId]="currentId"
-  id="myModal"
-  class="modal"
-></app-reservation>
