--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,17 +1,17 @@
 <div class="modal-content">
   <h2 style="text-align: center">Réservation</h2>
-  <form #form="ngForm" (ngSubmit)="createRdv(form)">
+  <form #form="ngForm" (ngSubmit)="confirm(form)">
     <div class="form">
-      <label for="">Nom</label>
-      <input type="text" />
-      <label for="">Date</label>
-      <input type="date" />
-      <label for="">Description</label>
-      <textarea name="" id="" cols="15" rows="5"></textarea>
+      <label for="name">Nom</label>
+      <input ngModel name="name" type="text" />
+      <label for="date">Date</label>
+      <input [ngModel]="id" ngModel name="date" type="text" readonly="readonly" class="date" />
+      <label for="description">Description</label>
+      <textarea ngModel name="description" id="" cols="15" rows="5"></textarea>
       <br />
       <div class="btn">
         <button class="button-3">Confirmer</button>
-        <button class="button-4" (click)="cancel()">Annuler</button>
+        <button class="button-4" (click)="dismiss()">Annuler</button>
       </div>
     </div>
   </form>
